--- a/熟词生意.md
+++ b/熟词生意.md
@@ -1,13 +1,8 @@
 
- 表头  | 表头  | 表头
- ---- | ----- | ------  
- 单元格内容  | 单元格内容 | 单元格内容 
- 单元格内容  | 单元格内容 | 单元格内容 
-
 单词 | 熟义 | 生义
 -|-|-
-accomplished	|a. 已完成的，实现的	a. 熟练精通的
-account	|n. 账户	n. 报告，陈述
+accomplished	|a. 已完成的，实现的	|a. 熟练精通的
+account	|n. 账户	|n. 报告，陈述
 acknowledge	|v. （不情愿地）承认	v. 致谢
 answer	|v. 回答	|v. 负责 answer for
 approach|	v. 靠近，接近	|v. 开始，着手（工作，任务）approach their work
