--- a/熟词生意.md
+++ b/熟词生意.md
@@ -3,7 +3,7 @@
 -|-|-
 accomplished	|a. 已完成的，实现的	|a. 熟练精通的
 account	|n. 账户	|n. 报告，陈述
-acknowledge	|v. （不情愿地）承认	v. 致谢
+acknowledge	|v. （不情愿地）承认	|v. 致谢
 answer	|v. 回答	|v. 负责 answer for
 approach|	v. 靠近，接近	|v. 开始，着手（工作，任务）approach their work
 artificial|	a. 人工的，人造的	|a. 不自然的，不真实的
@@ -20,3 +20,24 @@ code|	n. 代码，代号	|n. 法典，法规
 coherent|	a. 黏着的	|a. （讨论中）一致的
 column|	n. 圆柱，柱状物	|n. （报刊中的）专栏
 condition	|n. 情况	|v. 被……制约
+consideration|	n. 考虑	n. 考虑因素
+cover|	v. 覆盖	|v. 给…. 保险；采访
+discount|	v. 打折	|v. 漠视，对…不全信
+distinct|	a. 不同的|	a. 清楚的，明白的
+establish|	v. 建立…机构	|v. 确认，证实
+establishment|	n. 建立	|n. 机构
+evolution|	n. 进化	|n. 缓慢进步
+exploit|	v. 开发，剥削	|n. 功劳，功绩
+fellowship|	n. 伙伴，友谊	|n. 奖学金
+figure|	n. 数字，图形，图表，体态，相貌	|v. 出现（in）；推断（on）（to figure in history 在历史上留名They figured on your arriving. 他们预料你会来。）
+finance	|n. 财政，金融	|v. 为…提供资金
+flatly	|ad. 水平地，平坦地	|ad. 断然地，直截了当地
+He flatly refused to join us.
+fold	|v. 折叠	（用于数词后的词缀）表示"……倍"；"……重"
+（five-fold 五倍 hundredfold 百倍）
+foreign	|a. 外国的	|a. 无关的，不相干的
+given	|a. 规定的，指定的	|prep. 鉴于，考虑到，倘若
+gross	|a. 毛重的，总的	|a. 明显的
+harbor|	n. 海港，港口	|v. 心怀；给……提供避难处
+hint	|n. 暗示，示意	|n. (pl) 建议，点子
+idea	|n. 理论	|n. 思想，观点
