--- a/熟词生意.md
+++ b/熟词生意.md
@@ -31,13 +31,51 @@ exploit|	v. 开发，剥削	|n. 功劳，功绩
 fellowship|	n. 伙伴，友谊	|n. 奖学金
 figure|	n. 数字，图形，图表，体态，相貌	|v. 出现（in）；推断（on）（to figure in history 在历史上留名They figured on your arriving. 他们预料你会来。）
 finance	|n. 财政，金融	|v. 为…提供资金
-flatly	|ad. 水平地，平坦地	|ad. 断然地，直截了当地
-He flatly refused to join us.
-fold	|v. 折叠	（用于数词后的词缀）表示"……倍"；"……重"
-（five-fold 五倍 hundredfold 百倍）
+flatly	|ad. 水平地，平坦地	|ad. 断然地，直截了当地He flatly refused to join us.
+fold	|v. 折叠	（用于数词后的词缀）表示"……倍"；"……重"（five-fold 五倍 hundredfold 百倍）
 foreign	|a. 外国的	|a. 无关的，不相干的
 given	|a. 规定的，指定的	|prep. 鉴于，考虑到，倘若
 gross	|a. 毛重的，总的	|a. 明显的
 harbor|	n. 海港，港口	|v. 心怀；给……提供避难处
 hint	|n. 暗示，示意	|n. (pl) 建议，点子
 idea	|n. 理论	|n. 思想，观点
+import	|v. 进口	|n. 要旨，含义
+inform	|v. 通知，告诉	|v. 告发，告密 （inform on sb）
+level	|a. 水平的	|v. 对准，指责   Criticism have been leveled against him. 
+interpret	|v. 解说	|v. 口译
+mirror	|n. 镜子	|n. 反映，反射
+oblige	|v. 强迫，强制	|v. 感激，感谢 be obliged to
+package	|n. 包裹	|n. 一揽子交易（计划等）（package deal 一揽子交易）
+particular	|a. 个别的，特定的	|a. （用于表语）过分讲究的，挑剔的
+pattern	|n. 样式，模式	|v. 仿制，模仿
+peculiar	|a. 独特的，个人的	|a. 怪癖的
+platform	|n. 站台，月台	|n. 党纲，政纲
+practically	|ad. 实际上	|ad. 几乎，差不多
+preparation	|n. 准备，预备	|n. 制剂，制备品
+promise	|v. 承诺，诺言	|n. 希望，出息
+promising |a. 有希望的，有前途的
+pronounced	pronounce |vt. 发音；宣布，宣判 |a. 明显的，显著的，确切的
+provided	|pp. 被提供的	|conj. 倘若
+province	|n. 省	|n. 领域
+provincial	|a. 乡下的	|a. 目光狭隘的
+provision	|n. 供应，给养	|n. 条款，规定
+reach	|v. 抵达	|n. 影响范围（far-reaching的影响深远的）
+reason	|n. 原因	|v. 推理 reasoning n. 推理
+reserve	|n. 储备，保留	|n. 缄默，谨慎，矜持
+routine	|n. 惯例	|n. 司空见惯的事
+royalty|	n. 王族（成员）	|n. （著作的）版税
+safe	|a. 安全的	|a. 谨慎的
+save	|v. 救	|prep. 除……之外
+school	|n. 学校	|n. 学派，流派
+second	|num. 第二	|v. 附和，赞成
+sensation	|n. 感觉，知觉	|n. 轰动，激动
+side	|n. 侧面，边|	v. 偏袒，援助
+solid	|a. 固体的	|a. 可靠的，有根据的，确实的
+some	|a. 一些	|ad. 大约，稍微（some 10 years ago 大约十年前）（It`s some warmer 今天稍暖和了点）
+specialty	|n. 特性	|n. 特产，特制品
+spell	|v. 拼写	|v. 招致，带来 n. 符咒
+（Does laziness always spells failure?懒惰总会导致失败吗?That view might spell doom for marriage.这种观念可能会把婚姻引入绝境）
+stomach	|n. 胃	|v. 忍受，忍耐（How can you stomach their affronts?你怎么能够忍受他们的侮辱?）
+substantially	|ad. 实际上，实质上	|ad. （引申）大幅度地
+be subject to	|a. 易于	|a. 服从
+thrust	|v. 刺，攻击，推	|n. 要点，要旨（The whole thrust of the project was to make money. 计划的核心在于赢利。）
