--- a/熟词生意.md
+++ b/熟词生意.md
@@ -52,8 +52,7 @@ peculiar	|a. 独特的，个人的	|a. 怪癖的
 platform	|n. 站台，月台	|n. 党纲，政纲
 practically	|ad. 实际上	|ad. 几乎，差不多
 preparation	|n. 准备，预备	|n. 制剂，制备品
-promise	|v. 承诺，诺言	|n. 希望，出息
-promising |a. 有希望的，有前途的
+promise	|v. 承诺，诺言	|n. 希望，出息 promising a. 有希望的，有前途的
 pronounced	pronounce |vt. 发音；宣布，宣判 |a. 明显的，显著的，确切的
 provided	|pp. 被提供的	|conj. 倘若
 province	|n. 省	|n. 领域
