--- a/词汇前缀.md
+++ b/词汇前缀.md
@@ -1,6 +1,6 @@
 # 1、a-
 
-　　## ① 加在单词或词根前面，表示"不，无，非"
+　　##  ① 加在单词或词根前面，表示"不，无，非"
 
 　　acentric 无中心的(a+centric中心的)
 
@@ -12,7 +12,7 @@
 
 　　anemia 反常的(a+nomal正常的+ous)
 
-　　② 加在单词前，表示"在…，…的"
+　　##  ② 加在单词前，表示"在…，…的"
 
 　　asleep 睡着的(a+sleep睡觉)
 
@@ -24,7 +24,7 @@
 
 　　awash .泛滥的(a+wash冲洗)
 
-　　2、ab-,abs-加在词根前，表示"相反，变坏，离去"等
+　# 2、ab-,abs-加在词根前，表示"相反，变坏，离去"等
 
 　　abnormal 反常的(ab+normal正常的)
 
@@ -50,7 +50,7 @@
 
 　　abstinence 节制;禁欲(abs+tin拿住+ense→不在拿住→戒除，禁欲)
 
-　　3、ab-,ac-,ad-,af-,ag-,an-,ap-,ar-,as-,at-等加在同辅音字母的词根前，表示"一再"等加强意
+　# 3、ab-,ac-,ad-,af-,ag-,an-,ap-,ar-,as-,at-等加在同辅音字母的词根前，表示"一再"等加强意
 
 　　accelerate陪伴(ac+company伙伴→陪伴)
 
@@ -118,7 +118,7 @@
 
 　　attest证实(at+test试验→一再试验→证实)
 
-　　4、ad-加在在单词或词根前，表示"做…，加强…"
+　# 4、ad-加在在单词或词根前，表示"做…，加强…"
 
 　　adapt适应(ad+apt能力→有适应能力)
 
@@ -146,13 +146,13 @@
 
 　　advent来临，来到(ad+vent来→来到)
 
-　　5、amphi-表示"两个，两种"
+　# 5、amphi-表示"两个，两种"
 
 　　amphibian两栖动物(amphi+bi生命+an→两个生命→两栖动物)
 
 　　amphicar水陆两用车(amphi+car车→两用车)
 
-　　6、an-在词根前，表示"不，无"
+　# 6、an-在词根前，表示"不，无"
 
 　　anarchism无政府主义(an+arch统治+ism→无统治→无政府主义)
 
@@ -162,7 +162,7 @@
 
 　　anonymous匿名的(an+onym名字+ous→匿名的)
 
-　　7、ana-表示"错误，在旁边，分开"
+　# 7、ana-表示"错误，在旁边，分开"
 
 　　analogy类比;类似(ana+logy讲话→再旁边讲→讲一样的东西→类似)
 
@@ -170,7 +170,7 @@
 
 　　analysis分析(ana+lysis分开→分开来→分析)
 
-　　8、ante-表示"前面，先"
+　# 8、ante-表示"前面，先"
 
 　　antedate提前写日期;先于，早于(ante+date日期→提前写日期)
 
@@ -178,7 +178,7 @@
 
 　　antecedent(aute+ced走+ent→走在前面的[事] →前事)
 
-　　9、anti-表示"反对，相反"
+　# 9、anti-表示"反对，相反"
 
 　　antiwar反战的(anti+war战争)
 
@@ -190,7 +190,7 @@
 
 　　antibody抗体(anti+body身体)
 
-　　10、人，人类-anthrop(o)
+　# 10、人，人类-anthrop(o)
 
 　　anthropology[anthropo人类，-logy…学者]人类学
 
@@ -201,3 +201,897 @@
 　　anthropomorphous[anthropo人，morph形，-ous…的]有人形的，似人的
 
 　　anthroposociology [anthropo人类，sociology社会学]人类社会学
+  
+  # 11、人民―
+    
+     ##    (1)popul
+
+　　population[popul人民→居民，-ation名词字尾]全体居民，人口
+
+　　populous [popul人民→居民，-ous…的]人口稠密的
+
+　　populate [popul人民，-ate动词字尾，使…,做…]使人民居住于…中，使人口集中在…之中，移民于….
+
+　　Repopulate [re-再，重新，见上]使人民重新居住于…
+
+　　Depopulate [de-除去，去掉，popul人民→人口，-ate使…]使(某地)人口减少，减少人口
+
+　　Popularity[见上，-ity名词字尾，表示性质]大众性，通俗性
+
+　　Popularize[见上，- ize…化，使…](使)大众化，(使)普及，推广
+
+　　Popularizer[见上，-er者]普及者，推广者
+
+　　Popularization[见上，-ation表示行为]普及，推广，通俗化
+
+　　Populace[popul人民→平民，-ace名词字尾]平民，大众
+
+　　## 人民-(2)dem(o)
+
+　　democracy[demo人民，cracy统治;"人民统治"→人民做主→]民主;民主政治，民主政体;民主主义
+
+　　democrat[见上，crat主张…统治的人]民主主义者
+
+　　democratism[见上，-ism主义]民主主义
+
+　　democratize[见上，-ize…化]民主化;使民主化
+
+　　democratic[见上，-ic…的]民主的，民主主义的;民主政体的
+
+　　demography[demo人民→人数，人口，graphy写，记录→统计]人口统计学
+
+　　demographic[见上，-ic…的]人口统计的
+
+　　epidemic[epi-在…之间，dem人民，-ic…的;"流行于人民之中的" →]流行的，传染的;流行病，时疫
+
+　　epidemiology[见上，- io-连接字母，-logy…学]流行病学
+
+　　epidemiologist[见上，-logist…学者]流行病学者
+
+　　epidemiological[见上，-logical…学的]流行病学的
+
+　  ## 　男-(1)andr(o)
+
+　　androgyne[andro男人，gyn女人]具有男妇两性的人，阴阳人
+
+　　androgynism[andro男，gyn女，-ism表性质状态]半男半女
+
+　　##  男-(2)vir
+
+　　virile[vir男，ile形容词字尾，…的]男的，男性的，男子的，有男子气概的，有男性生殖力的
+
+　　virilism[见上，-ism表示现象]男性现象
+
+　　virility[见上，-ity表示性质]男子气概，男生殖力，男子的成年
+
+　　## 女-(1)gyn(o); gynec(o)
+
+　　gynecology[gyneco妇女，-logy…学]妇科学，妇科
+
+　　gynecologist[见上，-ist人]妇科医生
+
+　　gynecian[gynec妇女，-ian…的]妇女的，妇人的
+
+　　## 女-(2)fem; femin
+
+　　female[fem女，妇女]女性的，妇女的;女子
+
+　　feminine[femin女，-ine…的]女性的，妇女的
+
+　　femininity[femin女，-ality表示性质]女性，妇女的特性
+
+　　femininity[feminine(e)女性的，-ity表示性质]女子的气质，女人气，妇女总称
+
+　　feminism[femin女，-ism主义]男女平等主义;[-ism表示行为]争取女权运动
+
+　　femme妇女;妻子
+
+　# 12、be-
+
+　　## ① 构成动词，表示"使…成为"
+
+　　beguile欺骗(be+guile欺骗)
+
+　　belie掩盖(be+lie说慌)
+
+　　bequeath遗留给，传下(be+queath要求→要求给某人→遗留给)
+
+　　besiege围攻(be+siege包围→包围起来)
+
+　　beware注意(be+ware注意)
+
+　　befriend友好对待(be+friend朋友)
+
+　　befool欺骗(be+fool笨蛋→使人成笨蛋→欺骗别人)
+
+　　befall降临;发生(be+fall掉下→掉下来→发生)
+
+　　belittle小看(be+little小→小看人)
+
+　　bewilder使…迷惑(be+wilder迷惑)
+
+　　## ② 构成一些介词
+
+　　before在前面(be+fore前面)
+
+　　beneath在下面(be+neath下面)
+
+　# 13、bene- 表示"善，好"
+
+　　benewolent好意的(bene+vol意愿+ent→好意的)
+
+　　benefaction好事;恩惠(bene+fact做+ion→好事)
+
+　　benefit好处，利益(bene+fit做→做事后的好处→利益)
+
+　　benediction祝福(bene+dict说+ion→说好话)
+
+　　beneficent仁慈的，善行的(bene+fic做+ent→做好事的)
+
+　# 14、bi-表示"两个，两"
+
+　　biweekly双周刊(bi+week星期+ly→两星期)
+
+　　bilingual双语种的(bi+lingu语言+al→双语的)
+
+　　biennial两年一次的(bi+enn年+ial→两年〔一次〕的)
+
+　　biannual一年两次的(bi+ann[年]+ual→一年两次的)
+
+　# 15、by-表示"在旁边，副的"
+
+　　byproduct副产品(by+product产品)
+
+　　byroad辅路(by+road路)
+
+　　byway小道(by+way小路)
+
+　　bygone过时的(by+gone过去的)
+
+　　bypass旁路;忽略(by+pass通过→从旁边通过→忽略)
+
+　　by work副业(by+work工作)
+
+　# 16、circum-表示"环绕，周围"
+
+　　circumcise环割(circum+cise切→环切)
+
+　　circumference周长(circum+fer带来→ence→带来一圈→周长)
+
+　　circumnavigate环航世界(circum+navigate航行)
+
+　　circumscribe限制(circum+scribe写→规定范围→限制)
+
+　　circumspect小心谨慎的(circum+stance站→站在周围→环境)
+
+　　circumvent回避(circum+vent走→绕圈走→回避)
+
+　# 17、co-表示"共同"，通常放在元音词根前
+
+　　Cooperation合作(co+operation操作→共同操作→合作)
+
+　　Coagulate凝结(co+agul凝聚+ate→凝聚起来)
+
+　　Coalesce联合;合作(co+al=ally联盟+esce)
+
+　　Coexist共存(co+exist存在)
+
+　　Cohere附着;粘着(co+here粘→粘在一起)
+
+　　Coincide一致，符合，巧合(co+in进+cide掉下→共同掉进来→巧合)
+
+　　Coordinate协调：同等的(co+ordin顺序+ate→顺序一样→同等的引申为平等;协调)
+
+　# 18、col-,cor在同辅音词根前，表示"共同"
+
+　　collaboration协作;合著(col+labor劳动+ation→共同劳动)
+
+　　collocate并置，排列(col+loc地方+ate→放在同一地方→排列)
+
+　　co lingual用同一种语言的(col+lingu语言+al→同语言的)
+
+　　collapse倒塌(col+lapse滑倒→全部滑倒→倒塌)
+
+　　collate校对(col+late放→放到一起→校对)
+
+　　collateral并列的，并行的(col+later边→al→周边的→并列的)
+
+　　colleague同事(col+→league捆绑→捆绑在一起的人→同事)
+
+　　collect收集(col+lect选择→放在一起选择→收集)
+
+　　collegiate学院的; 学生的(col+legi读+ate→共同读书→学院的)
+
+　　colloquial口语的(col+loqu说+ial→两人一起说→口语会话的)
+
+　　collusion共谋，勾结(col+lus玩+ion→共同玩弄→共谋)
+
+　　correct改正，纠正(cor+rect正→全部改正→纠正)
+
+　　correspond通信;符合(cor+respond反应→共同反应→相互通信)
+
+　　corrupt腐败的;变环的(cor+rupt断→全部断→变坏的，腐败的)
+
+　　corrigible能够改正的(cor+rig改正+ible→全部改正的)
+
+　　corroborate证实(cor+robor力量+ate→用力量→证实)
+  
+  # 19、com-,con-表示"共同"
+
+　　combine联合，结合(com+bine捆→捆在一起→结合)
+
+　　compassion同情(com+passion爱国者→同胞)
+
+　　compatriot同胞(com+patriot动→大家一起动→动乱)
+
+　　commend赞扬;推荐(com+mend信任;命令→大家信任→赞扬;参考;recommend)
+
+　　commemorate纪念(com+memor记住+ate→大家一起记住→纪念)
+
+　　commensurable相等的，相称的(com+mensur测量+able→能放在一起的测量→相等的)
+
+　　comparison比较(com+pari平等+son→一起平等→比较)
+
+　　compact紧密的;合同(com+pact压紧→全部压紧→紧密的)
+
+　　comfort安慰(com+fort加强→[精神]强大→安慰)
+
+　　commodious宽敞的(com+mod动+ious→共同动→有动的地方→宽敞的)
+
+　　compete比赛(com+pete追求→一起追→比赛)
+
+　　component成分(com+pon放+ent→放到一起[的东西]→成分)
+
+　　compress压缩(com+press压→一起压→压缩)
+
+　　concentric同中心的(con+centric中心的)
+
+　　contemporary同时代的(con+tempor时间+ary→同时间的)
+
+　　conclude结束;总结(con+clude关闭→全部关闭→结束)
+
+　　confirm坚定;证实(con+firm坚定)
+
+　　condense凝结;浓缩(con+dense 浓密的)
+
+　　consolidate巩固，加强(con+solid坚固+ate→成为大家的财产→没收)
+
+　　Conflict冲突(con+flict打→一起打斗→冲突)
+
+　　Confluence汇流(con+flu流+ence→共同流→汇流)
+
+　　Congregate集合的，聚集的(con+greg集合+ate→集合到一起→聚集的)
+
+　　Console安慰(con+sole安慰→一起安慰)
+
+　# 20.contra-表示"反对，相反"
+
+　　contrary相反的(contra+ary→相反的)
+
+　　contradict反驳;矛盾(contra+dict说→反着说→反驳)
+
+　　contravene违反，违背(contra+vene走→反着走→违反)
+
+　　contraband走私(contra+band命令→违反命令做事→走私;参考：ban禁止)
+
+　# 21.counter-表示"反对，相反"
+
+　　counteract对抗;抵消(counter+act行为→反着行动→对抗)
+
+　　counterbalance平衡(counter+balance平衡→两边一样→达到平衡)
+
+　　countermand撤消(counter+mand命令→反命令→撤消〔命令〕)
+
+　# 22.de-
+
+　　## ① 表示"去掉，变坏，离开，变慢，向下"等
+
+　　destruction破坏(de+struct结构;建造+ion→弄坏结构→破坏)
+
+　　desalt除去盐分(de+salt盐→去掉盐分)
+
+　　deforest砍伐森林(de+forest森林→去掉森林)
+
+　　devalue降低价值(de+value价值→去掉价值)
+
+　　depress压制，压抑(de+press压→向下压→压制)
+
+　　detrain下火车(de+train火车)
+
+　　decelerate减速(de+celer速度+ate→使速度变慢)
+
+　　decode破译(de+code密码→去掉密码)
+
+　　defame诽谤，中伤(de+fame名声→名声变坏→诽谤)
+
+　　## ② 表示"使…成为，加强"等
+
+　　delimit 划定界限(de+limit限定→加强限定)
+
+　　depict描绘(de+pict图画→成为图画→描绘)
+
+　　design设计;计划(de+sign做标志→设计)
+
+　　definition定义;清晰(de+fin界限+ition→划出界限→定义)
+
+　# 23.di-
+
+　　## ① 表示"两个，双"
+
+　　dichromatic两色的(di+chrom颜色+atic→两色的)
+
+　　dioxide二氧化物(di+ox氧+ide→二氧化物)
+
+　　dilemma进退两难(di+lemma争论→二种争论→进退两难)
+
+　　dichotomize分成二，对分(dicho=di+tom切割+ize→切成二分)
+
+　　## ② 表示"使…变成，分开，离开"
+
+　　dilate膨胀，扩大(di+late放→分开放→扩大)
+
+　　dilute冲淡，稀释(di+lute冲洗→冲洗开→冲淡)
+
+　　digest消化;文摘(di+gest带→带下去→消化→经过消化后的精华→文摘)
+
+　　diminish减少;消失(di+mini小+ish→变小，减少)
+
+　　digress离题(di+gress走→走开→离题)
+
+　　divide分开(di+vide分开→分开)
+
+　　divorce离婚(di+vorce=vert转→从〔丈夫身边〕转开→离婚;参考：divert转开)父，祖-patr(i); part(o); pater
+
+　　patriarch[patri父，祖arch首脑，长]家长;族长
+
+　　patriarchal[见上，-al…的]家长的;族长的;家长似的
+
+　　patriot[patri祖→祖国，-ot名词字尾，表示人]爱祖国者，爱国主义者
+
+　　patriotic〔见上，-otic形容词字尾，…的〕爱国的
+
+　　patriotism[见上，-ism主义]爱国主义;爱国心
+
+　　unpatriotic〔un-不，见上〕不爱国的
+
+　　patenal〔pater父，-n-,-al…的〕父亲的，父系的
+
+　　paternalism[见上，-ism表示行为，现象]家长式统治，家长作风母-matr(i); mater; metro
+
+　　matriarch[matri母→女性，arch首脑，长]女族长;女家长
+
+　　matrimony[matri母→婚姻，-mony名词字尾]婚姻，结婚
+
+　　matrimonial〔见上，-al…的〕婚姻的，结婚的
+
+　　matron〔mart母，-on表示人〕主妇，老妇
+
+　　matronage[见上，-age名词字尾]主妇的身份或职责
+
+　　maternal[matr母，-n-,-al…的]母亲的，母性的
+
+　　maternity[见上，-ity名词字尾]母性的，母性的
+
+　　metropolis[metro母，polis城市;"母城" →首城，最大的城]大城市，主要城市，大都会，首府
+
+　# 24.dia-表示"穿过，二者之间"
+
+　　dialogue对话(dia+logue话→对着说话)
+
+　　diameter直径(dia+meter测量→对着测量〔圆〕直径)
+
+　　diaphanous透明的;精致的(dia+phan显示+ous→对面显示〔影子〕→透明的)
+
+　　dialectic辩证法(dia+lect讲+ic→二人对讲→辩证法)
+
+　　diagnosis诊断(dia+gnosis知道→穿过〔皮肤〕知道→诊断)
+
+　　diagram图表(dia+gram→交叉对着画→图表)
+
+　# 25.dif-和辅音重复表示"不，否定，分开"
+
+　　differ不同(dif+fer带来→带来不同→不同)
+
+　　difference不同(differ的名词)
+
+　　diffident自卑的(dit+fid相信+ent→不相信〔自己〕→自卑的)
+
+　　diffuse散布的，散开的(dif+fusc流→分开流→散布的)
+
+　　difficult困难的(dif+fic做+ult→不好做→困难的)
+
+　　difform不同形式的;不规则的(dif+form形状→形状不同)
+
+　# 26.dis-
+
+　　## ① 表示"不，消失掉"
+
+　　dislike不喜欢(dis+like喜爱→不喜爱)
+
+　　disorder无秩序(dis+order顺序→没有顺序)
+
+　　dishonest不诚实的(dis+honest诚实的)
+
+　　disappear消失(dis+appear出现→不出现→消失)
+
+　　disproof反证，反驳(dis+proof证实→不证实→反证)
+
+　　discourage使失去勇气(dis+courage勇气)
+
+　　disarm解除武装(dis+arm武装→去掉武装)
+
+　　dispel驱除，消除(dis+pel推→推开→驱除)
+
+　　dispassionate平心静气的(dis+passionate有激情的)
+
+　　discover发现(dis+cover盖→把盖揭开→发现)
+
+　　dismay沮丧(dis+may能够→不能做事→沮丧;参考：五月能种粮食，所以叫May)
+
+　　## ② 表示"分开，分离"
+
+　　disseminate散布，传播(dis+semin种子+ate→散布〔种子〕)
+
+　　dispense分配(dis+pense花费→分开花费→分配〔财富等〕)
+
+　　distract分心(dis+tract拉→把〔心〕拉开→分心)
+
+　　distend膨胀(dis+tend拉→分开拉→膨胀)
+
+　　discriminate辨别;歧视(dis+crimin分辨→ate→分辩开)
+
+　　dismiss解散;开除(dis+miss送→送出→解散)
+
+　　disburse支付，支出(dis+burse钱包→从钱包中分出→支出)
+
+　　discard丢弃，抛弃(dis+card扔→扔出去)
+
+　　discuss讨论(dis+cuss敲打→把〔问题〕分开敲→讨论)
+
+　# 27.dys-表示"坏，不良"
+
+　　dyspepsia消化不良(dys+peps消化;胃+ia病→消化不好)
+
+　　dystrophy营养不良(dys+trophy营养)
+
+　# 28.e-,ef-表示"出，出来"
+
+　　elongate延长，拉长(e+long长+ate→长出来)
+
+　　elaborate精工细做的(e+labor劳动+ate→劳动出来→精做的)
+
+　　eject投出，掷出(e+ject掷→掷出)
+
+　　emerge浮现(e+merge投入;淹没→淹没的东西出现→浮现)
+
+　　evade逃出，逃避(e+vade走→走出去→逃避)
+
+　　eradicate根除，灭绝(e+radic根+ate→把根挖出→根除)
+
+　　effluence流出(ef+flu流+ence→流出)
+  # 29.em-,en-
+
+　　## ① 表示"进入…之中，包围"
+
+　　embrace拥抱(em+brace胳膊→进入怀抱)
+
+　　embed安置;嵌于(em+bed范围;床→进入范围→安置)
+
+　　empathy感情相融的(em+pathy感情→进入感情)
+
+　　embarrass使难堪(em+barrass套子→进入套子→难堪)
+
+　　embattle整军备战(em+battle战斗)
+
+　　enroll注册，记入名册(en+roll名单)
+
+　　encage关入笼中(en+cage笼子)
+
+　　enchain束缚(en+chain锁链)
+
+　　## ② 表示"使…进入状态"
+
+　　empower授权(em+power权力)
+
+　　embitter使痛苦(em+bitter痛苦的)
+
+　　embody体现(em+body身体→〔精神〕进入身体→体现)
+
+　　embellish装饰(em+bell美好+ish→进入美好→装饰)
+
+　　emboss使凸出(em+boss凸出→使凸出)
+
+　　emphreal天空的(em+pyre火+al→进入火、太阳→天空的)
+
+　　enact制定;颁布(en+act行动→进入行动→颁布〔法令〕)
+
+　　enchant使迷醉(en+chant咒语→被咒语所迷醉)
+
+　　encompass包围，围绕(en+compass包围)
+
+　　endanger使危险(en+danger危险)
+
+　　encourage鼓励(en+courage勇气→使人进入勇气→鼓励)
+
+　　enlighten启发，开导(en+ligh光+en→给人光明→启发)
+
+　# 30.epi-表示"在….上，在….周围，在….后面"
+
+　　epidemic流行性的(epi+dem人民+ic→在人民周围→流行的)
+
+　　epigram警句，格言(epi+gram写→写在上面的话→格言)
+
+　　epilogue后记，结尾部分(epi+lougue说→在后面说的话→后记)
+
+　　episode一段经历，片段(epi+sode路→在路上→一段经历;片段)
+
+　　epitome梗概，缩影(epi+tome卷册→〔一卷书后的〕梗概)
+
+　# 31.eu-表示"好，优秀"
+
+　　eulogize赞美(eu+log说+ize→说好话)
+
+　　euphemism委婉的词语(eu+phem讲话+ism→讲好话)
+
+　　euphonious声音优美的(eu+phon声音+ious→声音好听的)
+
+　　eurhythmic协调的(eu+rhythm节奏+ic)
+
+　　euphoria幸福愉快感(eu+phor带来+ia→带来美好→愉快)
+
+　　eugenics优生学(eu+gen产出+ics→产生优秀〔后代〕→优秀生)
+
+　# 32.ex-
+
+　　## ① 表示"出，出去"
+
+　　exclude排外(ex+clude关闭→关出去→排外)
+
+　　expel赶出，逐出(ex+pel推→推出去→逐出)
+
+　　expose暴露(ex+plse放→放出去→暴露)
+
+　　exalt使升高(ex+alt高→高出来→升高)
+
+　　extract抽出，拔出(ex+tract拉→拉出→拔出)
+
+　　excise切除(ex+cise切→切出→切除)
+
+　　exceed超过，超出(ex+ceed走→走出→超出)
+
+　　exhale呼气(ex+hale气→出气→呼气)
+
+　　exhume掘出，挖出(ex+hume土→出土→挖出)
+
+　　expurgate净化;删去(ex+purg冲洗+ate→冲洗出来→净化)
+
+　　## ② 表示"前面的，前任的"
+
+　　ex-wife前妻(ex前+wife妻子)
+
+　　ex-president前任总统(ex前+president总统)
+
+　　33.exo-表示"外部的，外面"
+
+　　exotic来自异国的(exo+tic→从外面来的)
+
+　　exoteric外界的，外面的(exo+teric→外面的)
+
+　　exocentric外向的，离心的(exo+centric中心的)
+
+　　exosphere外大气层(exo+sphere球;大气层)
+
+　　exodus大批移出(exo+odus大批量)
+
+　　exothermic放出热量的(exo+therm热+ic→热外出→放热)
+
+　# 34.extra-表示"以外的，超过的"
+
+　　extracurriculum课外的(extra+curriculum课程表)
+
+　　extraordinary格外的(extra+ordinary变通的→超出普通)
+
+　　extrasolar　太阳系以外的(extra+solar太阳的)
+
+　　extraneous外来的(extra+aneous…的→从外面来的)
+
+　　extravagant奢侈的(extra+vag走+ant→走得过分→奢侈的)
+
+　　extrovert性格外向的(extra+vert转→〔性格〕向外转→外向)
+
+　　extrapolate推断(extra+polate放→放到〔事实〕外→推断)
+
+　　extraviolet紫外线的(extra+violet紫色的)
+
+　# 35.fore-表示"前面，预先"
+
+　　forestall阻止(fore+stall阻止)
+
+　　forebode预兆;凶兆(fore+bode兆头→预兆)
+
+　　forefather前人，祖先(fore+father父亲;祖先)
+
+　　forearm前人，祖先(fore+amr胳膊)
+
+　　forecast预料(fore+cast扔→预先扔下→预料)
+
+　　foreshadow预示，暗示(fore+shadow影子→影子预先来)
+
+　# 36.hetero-表示“异类，异种”
+
+　　heterosexual异性的(hetero+sexual性别的)
+
+　　heterodoxy异教，异端(hetero+doxy观点→观点不同)
+
+　　heterogeneous异类的，不同的(hetero+gen产生+eous→产生不同的)
+
+　# 37.homo-表示“同类的”
+
+　　homogeneous同类的;同族的(homo+gen产生+eous→产生相同的)
+
+　　homosexual同性恋的(homo+sexual性别的)
+
+　　homocentric同中心的(home+centric中心的)
+
+　　相同的方面治疗)
+
+　　homogenize使一致(home+gen产生+ize→产生一致→使一致)
+
+　# 38.hyper-表示“超过，太多”
+
+　　hyperactive活动过度的(hyper+active活动的)
+
+　　hypersensitive过敏的(hyper+sensitive敏感的)
+
+　　hypercritical吹毛求疵的(hyper+critical批评的)
+
+　　hyperbole夸张法(hyper+bole抛→活抛得高→夸张)
+
+　　hypertension过度紧张;高血压(hyper+tension紧张)
+
+　# 39.hypo-表示“下面，次等”
+
+　　hypodermic皮下的(hypo+derm皮+ic)
+
+　　hypothesis假说，假设(hypo+thesis论文→还不是正式的理论→假说)
+
+　　hypomnesia记忆力减退(hypo+mnes记忆+ia→记忆变得不好)
+
+　　hypotrophy发育不良(hypo+trophy营养→营养不够→〔导致〕发育不良)
+
+　# 40.il-,ir-
+
+　　## ① 放在同辅音词根前表示“不，无”
+
+　　illegal非法的(il+legal合法的)
+
+　　illiterate 不识字的(il+literate认字的)
+
+　　illogical不合逻辑的(il+logical逻辑的)
+
+　　illimitable无限的(il+limit限制+able)
+
+　　irregular不规则的(ir+regular规则的)
+
+　　irrational不合理的(ir+rational合理的)
+
+　　irrelative无关的(ir+relative相关的)
+
+　　irresolute无决断力的(ir+resolute果断的)
+
+　　irreproadchable　无可指责的(ir+reproachable能被指责的)
+
+　　irrefutable无可反驳的(ir+refutable可反驳的)
+
+　　irresistible不可抗拒的(ir+resistible可抗拒的)
+
+　　irrevocable不可取消的(ir+revocable可取消的;来自：revoke取消)
+
+　　## ② 表示“使….成为，进入”
+
+　　illustrate说明，阐明(il+lustr光+ate→进入光明→说明)
+
+　　illuminate照亮;使明白(il+lumin光+ate→进入光明→说明)
+
+　　illusion幻觉(il+lus玩弄+ion→被〔幻觉〕玩弄→幻觉)
+
+　　illusory虚幻的(来自illusion)
+
+　　irruption闯入，冲入(ir+rupt断+ion→打断〔别人〕→闯入)
+
+　　irradiate使明亮，生辉(ir+radi发光+ate→发光→生辉)
+
+　　irritate激怒;刺激(ir+rit擦+ate→进入磨擦→激怒)
+ #41.im-,in-
+
+　　## ① 表示“不，无，非”
+
+　　impossible不可能的(im+plssible可能的)
+
+　　immoral不道德的(im+moral道德的)
+
+　　impolite无礼的(im+polite礼貌的)
+
+　　impartial公平的(im+partial有偏见的)
+
+　　impassive无动于衷的(im+pass感情+ive→没感情)
+
+　　impeccable无瑕疵的(im+pecc斑点+able→无斑点的)
+
+　　immortal不朽的(im+mortal死的)
+
+　　immutable不变的(im+mutable可变的)
+
+　　inglorious不光彩的(in+glori光荣+ous→不光荣的)
+
+　　incapable无能力的(in+capable有能力的)
+
+　　inhuman不人道的(in+human人道的)
+
+　　injustice不公正(in+justice公正)
+
+　　incorrigible积习难改的(in+corrigible可改正的)
+
+　　inconstant多变的，无常的(in+constant稳定的)
+
+　　indifferent冷漠的(in+different不同的→同与不同的“事不关已” →冷漠的)
+
+　　innocuous无害的(in+noc毒害+ous→无害的)
+
+　　inimitable无可比拟的(in+imit模仿+able→不能模仿的)
+
+　　insubordinate不服从的，反抗的(in+subordnate服从的)
+
+　　## ② 表示“向内，进入”
+
+　　imprison监禁(im+prison监狱)
+
+　　impel驱动(im+pel推→推进，驱动)
+
+　　imperil处于危险中(im+peril危险)
+
+　　impulse冲动(im+pulse跳动→冲动)
+
+　　implicit含蓄的(im+plic重叠+it→进入重叠→不直说→储蓄的)
+
+　　impersonate扮演，模仿(im+person人+ate→进入别人→扮演别人)
+
+　　inborn天生的(in+born出生的)
+
+　　inaugurate举行就职典礼(in+augur预兆，开始+ate→进入开始→就职;参考：augury预兆)
+
+　　incentive激励(in+cent唱歌+ive→把精神唱进去→激励)
+
+　　incorporate合并，并入(in+corpor团体+ate→成为团体)
+
+　　inflame使燃烧;激怒(in+flame火焰)
+
+　　inspired有灵感的(in+spired有呼吸的→有生命的，有灵感的)
+
+　　indoor户内的(in+door门→门内的)
+
+　# 42.inter-表示“在…之间，相互”
+
+　　international国际的(inter+national国家的)
+
+　　interpersonal人与人之间的(inter+personal个人的)
+
+　　interpose置于，介入(inter+pose放→放在二者之间)
+
+　　intersect横断(inter+sect切割 →在中间切→横断)
+
+　　intervene干涉(inter+vene走→走在二者之间→干涉)
+
+　　interaction相互影响(inter+action行动→相互行动→影响)
+
+　　interchangeable可互换的(inter+changeable可改变的)
+
+　　interlude(活动间的)休息(inter+lude玩→在中间玩→活动间休息)
+
+　　interrelate相互关连(inter+relate关连)
+
+　# 43.intro-表示“向内，入内”
+
+　　introduce引入，介绍(intro+duce引→引进)
+
+　　introspect内省，反省(intro+pect看→向内看→内省)
+
+　　introvert内向(intro+vert转→向内转→内向)
+
+　　intromit插入，干预(intro+mit放→放进去→插入)
+
+　　introversible可向内翻的(intro+vers转+able→能向内转的)
+
+　# 44.macro-表示“宏伟，大”
+
+　　macroworld宏观世界(macro+world世界)
+
+　　macrostructure宏观结构(macro+structure结构)
+
+　　macroscale大规模的(macro+scale规模)
+
+　　macrobian长寿的(macro+bi生命+an→大生命→长寿)
+
+　　macroclimate大气候(macro+climate气候)
+
+　# 45.mal-表示“坏，恶”(亦作male)
+
+　　malcontent不满的(mal+content满意的)
+
+　　malpractice不法行为(mal+practice做事，实践→做坏事)
+
+　　malnutrition营养不良(mal+nutrition营养)
+
+　　malediction诅咒(male+dict说+ion→说坏话)
+
+　　malefaction坏事，恶行(male+fact做+ion→做坏事)
+
+　　malodor恶臭(mal+odor气味)
+
+　　maltreat虐待(mal+treat对待)
+
+　　malapropism字的误用(mala+prop恰当+ism→[用字]不恰当;来自一喜剧中的Mrs.Malaprop,以用词错误闻名)
+
+　　malevolent恶意的(male+vol意志+ent→坏意志)
+
+　　maladroit笨拙的(mal+adroit灵巧的)
+
+　# 46.micro-表示“微，小”
+
+　　microscope显微镜(micro+scope看→看小东西→显微镜)
+
+　　microworld微观世界(micro+world世界)
+
+　　microskirt超短裙(micro+skirt裙子)
+
+　　microwave微波(micro+wave波)
+
+　　microbe微生物(micro+be=bi生命→小生命→微生物)
+
+　　microbiology微生物学(micro+bilolgy生物学)
+
+　　microfilm微缩胶卷(micro+film胶片)
+
+　# 47.mini-表示“小”
+
+　　minibus小公共汽车(mini+bus公共汽车)
+
+　　miniskirt超短裙(mini+skirt裙子)
+
+　　miniwar小规模战争(mini+war战争)
+
+　　miniature小画象，缩影(mini+ature表示物品→小物品→小画象)
+
+　　minify使…缩小(mini+fy→小化)
+
+　　minimal最低限度的(minim=mini+al→最小的)
+
+　　minimum最小量(minim+um)
+
+　　minion仆人(minim+on→小人〔仆人自称小人〕)
+
+　　deminish缩小的，减少的(de+mini小+ish→使…小→缩小)
+
+　# 48.mis-表示“错误，坏”
+
+　　mistake错误(mis+take拿→拿错→错误)
+
+　　misspell拼写错误(mis+spell拼写)
+
+　　misunderstand误解(mis+understand理解)
+
+　　misdoing坏事(mis+doing做事)
+
+　　misrule对…施暴政(mis+rule统治→统治不善)
+
+　　misfortune不幸(mis+fortune幸运的)
+
+　　mistrust不信任(mis+trust相信)
+
+　　misanthrope愤世嫉俗者(mis+anthrope人→不喜欢人)
+
+　　miscreant恶棍(mis+creant做事的人→做坏事的人)
+
+　　mishap坏运气，不幸(mis+hap运气→运气不好)
+
+　　mischievous恶作剧的(mis+chiev=chief首领+ous→做坏事的首领)
