--- a/词汇前缀.md
+++ b/词汇前缀.md
@@ -12,7 +12,7 @@
 
 　　anemia 反常的(a+nomal正常的+ous)
 
-　　##  ② 加在单词前，表示"在…，…的"
+　　**② 加在单词前，表示"在…，…的"**
 
 　　asleep 睡着的(a+sleep睡觉)
 
@@ -204,7 +204,7 @@
   
   # 11、人民―
     
-     ##    (1)popul
+    **(1)popul**
 
 　　population[popul人民→居民，-ation名词字尾]全体居民，人口
 
@@ -226,7 +226,7 @@
 
 　　Populace[popul人民→平民，-ace名词字尾]平民，大众
 
-　　## 人民-(2)dem(o)
+　　**人民-(2)dem(o)**
 
 　　democracy[demo人民，cracy统治;"人民统治"→人民做主→]民主;民主政治，民主政体;民主主义
 
@@ -250,13 +250,13 @@
 
 　　epidemiological[见上，-logical…学的]流行病学的
 
-　  ## 　男-(1)andr(o)
+　 **男-(1)andr(o)**
 
 　　androgyne[andro男人，gyn女人]具有男妇两性的人，阴阳人
 
 　　androgynism[andro男，gyn女，-ism表性质状态]半男半女
 
-　　##  男-(2)vir
+　　**男-(2)vir**
 
 　　virile[vir男，ile形容词字尾，…的]男的，男性的，男子的，有男子气概的，有男性生殖力的
 
@@ -264,7 +264,7 @@
 
 　　virility[见上，-ity表示性质]男子气概，男生殖力，男子的成年
 
-　　## 女-(1)gyn(o); gynec(o)
+　　**女-(1)gyn(o); gynec(o)**
 
 　　gynecology[gyneco妇女，-logy…学]妇科学，妇科
 
@@ -272,7 +272,7 @@
 
 　　gynecian[gynec妇女，-ian…的]妇女的，妇人的
 
-　　## 女-(2)fem; femin
+　　**女-(2)fem; femin**
 
 　　female[fem女，妇女]女性的，妇女的;女子
 
@@ -288,7 +288,7 @@
 
 　# 12、be-
 
-　　## ① 构成动词，表示"使…成为"
+　　**① 构成动词，表示"使…成为"**
 
 　　beguile欺骗(be+guile欺骗)
 
@@ -310,7 +310,7 @@
 
 　　bewilder使…迷惑(be+wilder迷惑)
 
-　　## ② 构成一些介词
+　  **② 构成一些介词**
 
 　　before在前面(be+fore前面)
 
@@ -484,7 +484,7 @@
 
 　# 22.de-
 
-　　## ① 表示"去掉，变坏，离开，变慢，向下"等
+　　**① 表示"去掉，变坏，离开，变慢，向下"等**
 
 　　destruction破坏(de+struct结构;建造+ion→弄坏结构→破坏)
 
@@ -504,7 +504,7 @@
 
 　　defame诽谤，中伤(de+fame名声→名声变坏→诽谤)
 
-　　## ② 表示"使…成为，加强"等
+　**② 表示"使…成为，加强"等**
 
 　　delimit 划定界限(de+limit限定→加强限定)
 
@@ -516,7 +516,7 @@
 
 　# 23.di-
 
-　　## ① 表示"两个，双"
+　　**① 表示"两个，双"**
 
 　　dichromatic两色的(di+chrom颜色+atic→两色的)
 
@@ -526,7 +526,7 @@
 
 　　dichotomize分成二，对分(dicho=di+tom切割+ize→切成二分)
 
-　　## ② 表示"使…变成，分开，离开"
+　　**② 表示"使…变成，分开，离开"**
 
 　　dilate膨胀，扩大(di+late放→分开放→扩大)
 
@@ -604,7 +604,7 @@
 
 　# 26.dis-
 
-　　## ① 表示"不，消失掉"
+　　**① 表示"不，消失掉"**
 
 　　dislike不喜欢(dis+like喜爱→不喜爱)
 
@@ -628,7 +628,7 @@
 
 　　dismay沮丧(dis+may能够→不能做事→沮丧;参考：五月能种粮食，所以叫May)
 
-　　## ② 表示"分开，分离"
+　　**② 表示"分开，分离"**
 
 　　disseminate散布，传播(dis+semin种子+ate→散布〔种子〕)
 
@@ -671,7 +671,7 @@
 　　effluence流出(ef+flu流+ence→流出)
   # 29.em-,en-
 
-　　## ① 表示"进入…之中，包围"
+　　**① 表示"进入…之中，包围"**
 
 　　embrace拥抱(em+brace胳膊→进入怀抱)
 
@@ -689,7 +689,7 @@
 
 　　enchain束缚(en+chain锁链)
 
-　　## ② 表示"使…进入状态"
+　　**② 表示"使…进入状态"**
 
 　　empower授权(em+power权力)
 
