--- a/词汇前缀.md
+++ b/词汇前缀.md
@@ -743,7 +743,7 @@
 
 　# 32.ex-
 
-　　## ① 表示"出，出去"
+　　**① 表示"出，出去"**
 
 　　exclude排外(ex+clude关闭→关出去→排外)
 
@@ -765,7 +765,7 @@
 
 　　expurgate净化;删去(ex+purg冲洗+ate→冲洗出来→净化)
 
-　　## ② 表示"前面的，前任的"
+　 **② 表示"前面的，前任的"**
 
 　　ex-wife前妻(ex前+wife妻子)
 
@@ -861,7 +861,7 @@
 
 　# 40.il-,ir-
 
-　　## ① 放在同辅音词根前表示“不，无”
+　　**① 放在同辅音词根前表示“不，无”**
 
 　　illegal非法的(il+legal合法的)
 
@@ -887,7 +887,7 @@
 
 　　irrevocable不可取消的(ir+revocable可取消的;来自：revoke取消)
 
-　　## ② 表示“使….成为，进入”
+　　**② 表示“使….成为，进入”**
 
 　　illustrate说明，阐明(il+lustr光+ate→进入光明→说明)
 
@@ -904,7 +904,7 @@
 　　irritate激怒;刺激(ir+rit擦+ate→进入磨擦→激怒)
  #41.im-,in-
 
-　　## ① 表示“不，无，非”
+　　**① 表示“不，无，非”**
 
 　　impossible不可能的(im+plssible可能的)
 
@@ -942,7 +942,7 @@
 
 　　insubordinate不服从的，反抗的(in+subordnate服从的)
 
-　　## ② 表示“向内，进入”
+　　**② 表示“向内，进入”**
 
 　　imprison监禁(im+prison监狱)
 
